feat(02-01): add Vercel AI SDK with provider factory
- Install ai, @ai-sdk/svelte, @ai-sdk/anthropic, @ai-sdk/openai, zod
- Create src/lib/server/ai.ts with getModel() factory function
- Support anthropic (Claude) and openai (GPT-4o) providers via AI_PROVIDER env
- Update .env.example with AI configuration variables

--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@ai-sdk/anthropic": "^3.0.16",
+		"@ai-sdk/openai": "^3.0.12",
+		"@ai-sdk/svelte": "^4.0.42",
 		"@libsql/client": "^0.17.0",
-		"drizzle-orm": "^0.45.1"
+		"ai": "^6.0.42",
+		"drizzle-orm": "^0.45.1",
+		"zod": "^4.3.5"
 	}
 }
