--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 TURSO_DATABASE_URL=libsql://your-database.turso.io
 TURSO_AUTH_TOKEN=your-auth-token
+
+# AI Provider Configuration
+# Options: anthropic | openai
+AI_PROVIDER=anthropic
+
+# Provider API Keys (only need the one matching AI_PROVIDER)
+ANTHROPIC_API_KEY=your-anthropic-key
+OPENAI_API_KEY=your-openai-key
