--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 		"@ai-sdk/anthropic": "^3.0.16",
 		"@ai-sdk/openai": "^3.0.12",
 		"@libsql/client": "^0.17.0",
+		"@node-rs/argon2": "^2.0.2",
 		"ai": "^6.0.42",
 		"drizzle-orm": "^0.45.1",
+		"oslo": "^1.2.1",
 		"zod": "^4.3.5"
 	}
 }
