--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.18",
 		"autoprefixer": "^10.4.23",
+		"dotenv": "^17.2.3",
 		"drizzle-kit": "^0.31.8",
 		"postcss": "^8.5.6",
 		"svelte": "^5.45.6",
